initiate: -slide in of images when in viewport -fix nav to top once header is out of view

--- a/style.css
+++ b/style.css
@@ -1,3 +1,68 @@
-/*header {*/
-    /*background-image: ;*/
-/*}*/
+* {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+    text-align: center;
+}
+header {
+    height: 350px;
+    background: url("sunset.jpg") no-repeat;
+    background-size: 100% 100%;
+}
+h1 {
+    line-height: 350px;
+    color: #fff;
+    text-shadow: 2px 2px 5px #000;
+}
+nav {
+    top: 0px;
+    position: relative;
+    background-color: #000;
+    width: 100%;
+    z-index: 1;
+}
+li {
+    display: inline-block;
+    padding: 10px 30px;
+}
+a {
+    font-size: 20px;
+    color: #fff;
+    text-decoration: none;
+}
+.contents {
+    margin: 60px 200px;
+    box-shadow: 2px 2px 10px #000;
+    padding: 40px 30px 55px 30px;
+}
+p {
+    padding-top: 15px;
+    text-align: left;
+}
+body.fixed nav {
+    position: fixed;
+}
+li:hover {
+    background-color: rgba(0,0,0,0.9);
+}
+.picture {
+    height: 60%;
+    width: 60%;
+    padding: 15px;
+}
+.align-left {
+    float: left;
+    transform: translateX(-25%);
+}
+.align-right {
+    float: right;
+    transform: translateX(25%);
+}
+.slide-in {
+    opacity: 0;
+    transition: all 0.6s;
+}
+.slide-in.active {
+    opacity: 1;
+    transform: translateX(0);
+}
